test_suite/tests/ui/borrow/duplicate_variant.stderr
error: duplicate serde attribute `borrow`
 --> $DIR/duplicate_variant.rs:9:13
  |
9 |     #[serde(borrow)]
  |             ^^^^^^

error: aborting due to previous error

